🎉 initial: environment for create project

--- a/dashboard-angular/src/app/app.component.html
+++ b/dashboard-angular/src/app/app.component.html
@@ -1,3 +1,7 @@
 <div class="dashboard">
-  <div>Dashboard (Angular)</div>
+  <div>
+    <span (click)="log($event)" *ngFor="let item of list">{{
+      item.message
+    }}</span>
+  </div>
 </div>
